Add support for creating clusters
