# api/clusters/endpoint.go
@@ -10,6 +10,21 @@ type Endpoint struct {
 	Client *client.Client
 }
 
+func (c *Endpoint) Create(request *models.ClustersCreateRequest) (*models.ClustersCreateResponse, error) {
+	bytes, err := c.Client.Query("POST", "clusters/create", request)
+	if err != nil {
+		return nil, err
+	}
+
+	resp := models.ClustersCreateResponse{}
+	err = json.Unmarshal(bytes, &resp)
+	if err != nil {
+		return nil, err
+	}
+
+	return &resp, nil
+}
+
 func (c *Endpoint) List() (*models.ClustersListResponse, error) {
 	bytes, err := c.Client.Query("GET", "clusters/list", nil)
 	if err != nil {
